--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -5,6 +5,7 @@
     <string name="menu_feeds">ಫೀಡ್ಸ್</string>
     <string name="menu_tmrmaker">ಟಿಎಂಆರ್ ಮೇಕರ್</string>
     <string name="menu_settings">ಸೆಟ್ಟಿಂಗ್ಗಳು</string>
+    <string name="menu_more">ಹೆಚ್ಚು</string>
     <string name="theme_switch">ದಿನ/ರಾತ್ರಿ</string>
     <string name="theme_switch_desc">ದಿನ ಮತ್ತು ರಾತ್ರಿ ಥೀಮ್‌ಗಳ ನಡುವೆ ಬದಲಾಯಿಸಿ</string>
     <string name="application">ಅಪ್ಲಿಕೇಶನ್</string>
@@ -14,11 +15,14 @@
     <string name="milk_yield_kg">ಹಾಲಿನ ಉತ್ಪಾದನೆ (KG)</string>
     <string name="milk_fat">ಹಾಲಿನ ಕೊಬ್ಬು (%)</string>
     <string name="pregnant_m">ಗರ್ಭಿಣಿ (M)</string>
+    <string name="use_bottom_navigation">ಕೆಳಗಿನ ನಾವಿಗೇಶನ್ ಬಳಸಿ</string>
+    <string name="use_bottom_navigation_desc">ಕೆಳಗಿನ ನಾವಿಗೇಶನ್ ಮತ್ತು ಬದಿಯ ನಾವಿಗೇಶನ್ ನಡುವೆ ಬದಲಾಯಿಸಿ</string>
+    <string name="navigation_drawer_open">ನಾವಿಗೇಶನ್ ಡ್ರಾಯರ್ ತೆರೆಯಿರಿ</string>
+    <string name="navigation_drawer_close">ನಾವಿಗೇಶನ್ ಡ್ರಾಯರ್ ಮುಚ್ಚಿ</string>
+    <string name="select_feeds">ಫೀಡ್ಸ್ ಆಯ್ಕೆಮಾಡಿ [%1$s]</string>
+    <string name="nutrient_requirements">ಪೋಷಕಾಂಶದ ಅಗತ್ಯತೆಗಳು [%1$s]</string>
+    <string name="feeds_to_be_included_in_ration_for">ರೇಷನ್‌ನಲ್ಲಿ ಸೇರಿಸಬೇಕಾದ ಫೀಡ್ಸ್ %1$s</string>
+    <string name="tmrmaker_title">ಹಸು ಮತ್ತು ಎಮ್ಮೆಗಳಿಗೆ ಫೀಡ್ ಫಾರ್ಮುಲೇಶನ್</string>
+    <string name="tmrmaker_greeting">ಹಾಲು ಹಸು ಮತ್ತು ಹಾಲು ಎಮ್ಮೆಗಳಿಗೆ ಒಟ್ಟು ಮಿಶ್ರ ರೇಷನ್ ಮಾಡಲು ಆಂಡ್ರಾಯ್ಡ್ ಅಪ್ಲಿಕೇಶನ್ ಅನ್ನು ಪರಿಚಯಿಸಲು ನಾವು ಸಂತೋಷಪಡುತ್ತೇವೆ.\nಕೆಳಗಿನ ಆಯ್ಕೆಗಳಲ್ಲಿ ಒಂದನ್ನು ಕ್ಲಿಕ್ ಮಾಡಿ ಮತ್ತು ಪುಟಗಳನ್ನು ಅನುಸರಿಸಿ</string>
 
-    <string-array name="pr_array">
-        <item>ಗರ್ಭಿಣಿ ಅಲ್ಲ</item>
-        <item>6 ತಿಂಗಳು</item>
-        <item>7 ತಿಂಗಳು</item>
-        <item>8 ತಿಂಗಳು</item>
-    </string-array>
 </resources>
