--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -6,6 +6,7 @@
     <string name="menu_tmrmaker">ಟಿಎಂಆರ್ ಮೇಕರ್</string>
     <string name="menu_settings">ಸೆಟ್ಟಿಂಗ್ಗಳು</string>
     <string name="menu_more">ಹೆಚ್ಚು</string>
+    <string name="menu_about">ಬಗ್ಗೆ</string>
     <string name="theme_switch">ದಿನ/ರಾತ್ರಿ</string>
     <string name="theme_switch_desc">ದಿನ ಮತ್ತು ರಾತ್ರಿ ಥೀಮ್‌ಗಳ ನಡುವೆ ಬದಲಾಯಿಸಿ</string>
     <string name="application">ಅಪ್ಲಿಕೇಶನ್</string>
@@ -24,5 +25,12 @@
     <string name="feeds_to_be_included_in_ration_for">ರೇಷನ್‌ನಲ್ಲಿ ಸೇರಿಸಬೇಕಾದ ಫೀಡ್ಸ್ %1$s</string>
     <string name="tmrmaker_title">ಹಸು ಮತ್ತು ಎಮ್ಮೆಗಳಿಗೆ ಫೀಡ್ ಫಾರ್ಮುಲೇಶನ್</string>
     <string name="tmrmaker_greeting">ಹಾಲು ಹಸು ಮತ್ತು ಹಾಲು ಎಮ್ಮೆಗಳಿಗೆ ಒಟ್ಟು ಮಿಶ್ರ ರೇಷನ್ ಮಾಡಲು ಆಂಡ್ರಾಯ್ಡ್ ಅಪ್ಲಿಕೇಶನ್ ಅನ್ನು ಪರಿಚಯಿಸಲು ನಾವು ಸಂತೋಷಪಡುತ್ತೇವೆ.\nಕೆಳಗಿನ ಆಯ್ಕೆಗಳಲ್ಲಿ ಒಂದನ್ನು ಕ್ಲಿಕ್ ಮಾಡಿ ಮತ್ತು ಪುಟಗಳನ್ನು ಅನುಸರಿಸಿ</string>
+    <string name="about_text_block_1">ಈ ಮೊಬೈಲ್ ಅಪ್ಲಿಕೇಶನ್ ಅನ್ನು ಐಸಿಎಆರ್-ರಾಷ್ಟ್ರೀಯ ಪ್ರಾಣಿ ಪೋಷಣಾ ಮತ್ತು ಶಾರೀರಶಾಸ್ತ್ರ ಸಂಸ್ಥೆ (NIANP), ಬೆಂಗಳೂರು, ವಿಜ್ಞಾನಿಗಳ ತಂಡದ ಮೂಲಕ ಅಭಿವೃದ್ಧಿಪಡಿಸಲಾಗಿದೆ.\nಈ ಅಪ್ಲಿಕೇಶನ್ ಹಸು ಅಥವಾ ಎಮ್ಮೆಗಳಿಗೆ ಲಭ್ಯವಿರುವ ಆಹಾರ ಪದಾರ್ಥಗಳೊಂದಿಗೆ ಕಡಿಮೆ ವೆಚ್ಚದಲ್ಲಿ ಸಮತೋಲನದ ಒಟ್ಟು ಮಿಶ್ರ ರೇಷನ್ ತಯಾರಿಸಲು ರೈತರಿಗೆ ಸಹಾಯಕವಾಗಿದೆ.\nಪೋಷಕಾಂಶದ ಅಗತ್ಯತೆಗಳನ್ನು ಐಸಿಎಆರ್ (2013) ಅಗತ್ಯತೆಗಳ ಆಧಾರದ ಮೇಲೆ ಲೆಕ್ಕಹಾಕಲಾಗುತ್ತದೆ ಮತ್ತು ಉದಾಹರಣೆಗಳನ್ನು ಪ್ರಾಯೋಗಿಕ ಕ್ಷೇತ್ರದ ಸ್ಥಿತಿಗತಿಗಳ ಆಧಾರದ ಮೇಲೆ ನೀಡಲಾಗುತ್ತದೆ.\nಕಡಿಮೆ ವೆಚ್ಚದ ಆಹಾರ ತಯಾರಿಕೆಗೆ ಉತ್ತಮ ಸಂಯೋಜನೆ ಪಡೆಯಲು ಹೆಚ್ಚಿನ ಸಂಖ್ಯೆಯ ಸ್ಥಳೀಯವಾಗಿ ಲಭ್ಯವಿರುವ ಪದಾರ್ಥಗಳನ್ನು ಬಳಸಲು ಪ್ರೋತ್ಸಾಹಿಸಲಾಗುತ್ತದೆ.</string>
+    <string name="about_text_block_2">ಅಸ್ವೀಕಾರ: ಲೆಕ್ಕಹಾಕಿದ ರೇಷನ್ ರಚನೆ ಬಳಕೆದಾರನಿಂದ ನೀಡಿದ ಇನ್‌ಪುಟ್ ಆಧಾರದ ಮೇಲೆ ಆಗಿದೆ, ಡೆವಲಪರ್‌ನಿಂದ ಅಲ್ಲ.\nಈ ಅಪ್ಲಿಕೇಶನ್ ಮೂಲಕ ರಚಿಸಲಾದ ರೇಷನ್ ಕೇವಲ ಮಾರ್ಗಸೂಚಿಯಾಗಿದೆ ಮತ್ತು ಯಾವುದೇ ವಾಣಿಜ್ಯ ಅಥವಾ ಕಾನೂನು ಉದ್ದೇಶಕ್ಕಾಗಿ ಇದನ್ನು ಹಕ್ಕುಹೊಂದಲು ಸಾಧ್ಯವಿಲ್ಲ.\nಅಪ್ಲಿಕೇಶನ್‌ನ ಯಾವುದೇ ತಪ್ಪು ಮಾರ್ಗದರ್ಶನ ಅಥವಾ ನಷ್ಟವನ್ನು ಡೆವಲಪರ್‌ನಿಂದ ಹಕ್ಕುಹೊಂದಲು ಸಾಧ್ಯವಿಲ್ಲ.\nಇದು ರೇಷನ್ ರಚನೆಯ ಮಾರ್ಗಸೂಚಿಯಾಗಿದೆ.\nಪ್ರಾಣಿಗಳಿಗೆ ಆಹಾರ ನೀಡುವ ಮೊದಲು ಪ್ರಾಣಿ ಪೋಷಣಾ ತಜ್ಞರಿಂದ ಇದನ್ನು ಪರಿಶೀಲಿಸಬಹುದು.\n© ಐಸಿಎಆರ್-ಎನ್‌ಐಎಎನ್‌ಪಿ, ಬೆಂಗಳೂರು, 2021</string>
+    <string name="software_assistance">ಸಾಫ್ಟ್‌ವೇರ್ ಸಹಾಯ:</string>
+    <string name="software_assistance_desc">• ಡಾ. ವಿಶಾಲ್ ಪಾಟೀಲ್ (ಜೈನ್ ವಿಶ್ವವಿದ್ಯಾಲಯ)\n• ಮಿಸ್ಟರ್ ವೃಷಭ್ ಜೈನ್ (ಜೈನ್ ವಿಶ್ವವಿದ್ಯಾಲಯ)\n• ಮಿಸ್ಟರ್ ಜೆರಿ (ಜೈನ್ ವಿಶ್ವವಿದ್ಯಾಲಯ)\n• ಡಾ. ರಾಧಾ ಗುಪ್ತ</string>
+    <string name="app_concept_and_development">ಅಪ್ಲಿಕೇಶನ್ ಪರಿಕಲ್ಪನೆ ಮತ್ತು ಅಭಿವೃದ್ಧಿ:</string>
+    <string name="app_concept_and_development_desc">• ಡಾ. ಡಿ.ರಾಜೇಂದ್ರನ್\n• ಡಾ. ಎನ್ ಕೆ ಎಸ್ ಗೌಡ\n• ಡಾ. ಎಸ್ ಅನನದನ್\n• ಡಾ. ಎಸ್‌ಬಿಎನ್ ರಾವ್\n• ಡಾ. ಡಿಟಿ ಪಾಲ್\n• ಡಾ. ಎಂ ಗೋಪಿ\n• ಡಾ. ರಾಘವೇಂದ್ರ ಭಟ್ಟ</string>
+    <string name="acknowledgement">ಕೃತಜ್ಞತೆ:</string>
 
 </resources>
