--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="menu_feeds">Feeds</string>
     <string name="menu_tmrmaker">TMR Maker</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_more">More</string>
+    <string name="menu_about">About</string>
 
     <string name="dm_value" translatable="false">DM: %1$.2f KG</string>
     <string name="cp_value" translatable="false">CP: %1$.2f g</string>
@@ -37,6 +39,12 @@
 
     <string name="tmrmaker_title">Feed Formulation for Cattle and Buffalo</string>
     <string name="tmrmaker_greeting">We are happy to introduce an Android application for making total mixed ration for dairy cow and milch buffalo.\nClick one of the options below and follow the pages</string>
-    <string name="menu_more">More</string>
+    <string name="about_text_block_1">This mobile application has been developed by a team of scientist at ICAR-National Institute of Animal Nutrition and Physiology (NIANP), Bengaluru.\nThis application is useful for the farmer to prepare balanced total mixed ration for a cow or buffalo on least cost basis with available feed ingredients.\nNutrient requirements are calculated on the basis of ICAR (2013) requirements and examples are given based on the practical field condition.\nIt is encouraged to use more number of locally available ingredients for deriving best combination of least cost feed formulation.</string>
+    <string name="about_text_block_2">Disclaimer: The calculated ration formation is based on the input given by the user not by the developer.\nThe ration formulated by this app is only guideline and it cannot be claimed for any commercial or legal purpose.\nThe loss or any misguidance of the application cannot be claimed from the developer.\nIt is a guideline of ration formulation.\nIt may be verified by the Animal Nutritionist before feeding to the animals.\n© ICAR-NIANP, Bengaluru, 2021</string>
+    <string name="software_assistance">Software Assistance:</string>
+    <string name="software_assistance_desc">• Dr. Vishal Patil (Jain University)\n• Mr. Vrishab Jain (Jain University)\n• Mr. Jery J.S (Jain University)\n• Dr. Radha Gupta</string>
+    <string name="app_concept_and_development">App Concept and Development:</string>
+    <string name="app_concept_and_development_desc">• Dr. D.Rajendran\n• Dr. N K S Gowda\n• Dr. S Ananadan\n• Dr. SBN Rao\n• Dr. DT Pal\n• Dr. M Gopi\n• Dr. Raghavendra Bhatta</string>
+    <string name="acknowledgement">Acknowledgement:</string>
 
 </resources>
