--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_more">More</string>
     <string name="menu_about">About</string>
+    <string name="menu_example_tmr">Example for TMR</string>
+    <string name="menu_example_cm">Example for Concentrate Mixture</string>
 
     <string name="dm_value" translatable="false">DM: %1$.2f KG</string>
     <string name="cp_value" translatable="false">CP: %1$.2f g</string>
@@ -33,6 +35,7 @@
     <string name="milk_fat">Milk Fat (%)</string>
     <string name="pregnant_m">Pregnant (M)</string>
 
+    <string name="select_cattle">Select a cattle</string>
     <string name="nutrient_requirements">Cattle details of %1$s</string>
     <string name="select_feeds">Select feeds for %1$s</string>
     <string name="feeds_to_be_included_in_ration_for">Feeds to be included in ration for %1$s</string>
