Update strings- Add tamil and hindi

--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -39,4 +39,5 @@
     <string name="icar_nianp_website"><a href="http://nianp.res.in/">ಐಸಿಎಆರ್-ಎನ್‌ಐಎಎನ್‌ಪಿ ವೆಬ್‌ಸೈಟ್</a></string>
     <string name="icar_nianp_desc">ಐಸಿಎಆರ್-ರಾಷ್ಟ್ರೀಯ ಪ್ರಾಣಿ ಪೋಷಣಾ ಮತ್ತು ಶಾರೀರಶಾಸ್ತ್ರ ಸಂಸ್ಥೆ (ಐಸಿಎಆರ್-ಎನ್‌ಐಎಎನ್‌ಪಿ) 1995ರ ನವೆಂಬರ್ 24 ರಂದು ಬೆಂಗಳೂರು, ಭಾರತೀಯ ಕೃಷಿ ಸಂಶೋಧನಾ ಪರಿಷತ್ (ಐಸಿಎಆರ್), ನವದೆಹಲಿಯ ಆಶ್ರಯದಲ್ಲಿ ಸ್ಥಾಪಿಸಲಾಯಿತು.\n\nಪ್ರಾಣಿ ಉತ್ಪಾದಕತೆ ಮತ್ತು ಪಶುಪಾಲಕರ ಲಾಭದಾಯಕತೆಯನ್ನು ಸುಧಾರಿಸಲು ಶಾರೀರಶಾಸ್ತ್ರ-ಪೋಷಣಾ ವಿಧಾನಗಳನ್ನು ಬಳಸಿಕೊಂಡು ಪ್ರಾಣಿ ಆಹಾರ ಸಂಪತ್ತಿನ ನಿರ್ವಹಣೆಯ ಕುರಿತು ಮೂಲಭೂತ ಮತ್ತು ಮೂಲಭೂತ ಸಂಶೋಧನೆಗಳನ್ನು ನಡೆಸಲು ಸಂಸ್ಥೆಗೆ ಆದೇಶಿಸಲಾಗಿದೆ.\n\nಸಂಸ್ಥೆಯ ಹೊಸ ಆವರಣವನ್ನು 2003ರ ಆಗಸ್ಟ್ 13 ರಂದು ಮಾನ್ಯ ಕೃಷಿ ಸಚಿವರಾದ ಶ್ರೀ ರಾಜನಾಥ್ ಸಿಂಗ್‌ಜಿ ಉದ್ಘಾಟಿಸಿದರು.</string>
     <string name="cattle_and_buffalo_feed_formulation">Cattle and Buffalo Feed Formulation</string>
+    <string name="icar_nianp_2024">© ICAR-NIANP 2024</string>
 </resources>
